# sfplib

./: .dockerignore  .gitignore  LICENSE  README.md  repository.json
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: CONTRIBUTING.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  builder.yaml  ci.yaml  codespaces-prebuild.yaml  integration.yaml  labeler.yaml  release.yaml  security.yaml  stale.yaml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: bluetooth.py  debug.py  ha_bluetooth.py  health.py  modules.py  router.py  submissions.py
backend/app/core/: database.py  logging.py
backend/app/models/: module.py
backend/app/repositories/: module_repository.py
backend/app/schemas/: module.py  submission.py
backend/app/services/: backup_service.py  ble_operations.py  module_service.py
backend/app/services/ha_bluetooth/: ble_tracer.py  ha_bluetooth_client.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_health.py
docs/: BLE_EXPLORATION.md  BLUETOOTH.md  BLUETOOTH_SETUP.md  DEFERRED_FEATURES.md  DEPLOYMENT.md  TESTING_PLAN.md
sfplib/: CHANGELOG.md  DOCS.md  Dockerfile  LICENSE.md  README.md  apparmor.txt  config.yaml  icon.json  run.sh
sfplib/rootfs/: run.sh
sfplib/rootfs/etc/s6-overlay/s6-rc.d/backend/: run
sfplib/rootfs/etc/services.d/backend/: run
sfplib/translations/: en.yaml
tools/ble_exploration/: __init__.py  explorer.py  test_patterns.py
(+4 files in other folders)
