[tool.poetry]
name = "sfpliberate-backend"
version = "1.0.0"
description = "Backend API for SFPLiberate - SFP Wizard companion tool"
authors = ["SFPLiberate Contributors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.44"
aiosqlite = "^0.21.0"
alembic = "^1.17.1"
structlog = "^25.5.0"
httpx = "^0.28.1"
bleak = "^1.1.1"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.3"
mypy = "^1.18.2"
black = "^25.11.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
